Fix gap style issue

--- a/theme-base/components/input/_chips.scss
+++ b/theme-base/components/input/_chips.scss
@@ -3,6 +3,7 @@
 .p-chips {
     .p-chips-multiple-container {
         padding: math.div(nth($inputPadding, 1), 2) nth($inputPadding, 2);
+        gap: $inlineSpacing;
 
         &:not(.p-disabled):hover {
             border-color: $inputHoverBorderColor;
@@ -15,7 +16,7 @@
         .p-chips-token {
             padding: math.div(nth($inputPadding, 1), 2) nth($inputPadding, 2);
             margin-right: $inlineSpacing;
-            background: $chipBg;
+            background: $highlightBg;
             color: $chipTextColor;
             border-radius: $chipBorderRadius;
 
