--- a/themes/material/extensions/_autocomplete.scss
+++ b/themes/material/extensions/_autocomplete.scss
@@ -13,6 +13,8 @@
         &.p-autocomplete-multiple {
             .p-autocomplete-multiple-container {
                 @include filled-input-wrapper();
+                
+                gap: $inlineSpacing;
             }
         }
     }
